force-app/main/default/objects/Release__c/Release__c.object-meta.xml
<CustomObject>
    <description>An object where Change Items can be grouped together and includes details (a link to) of the Change request, an expected release date, release notes, and current status (planned, in progress, completed).</description>
    <label>Release</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>