force-app/main/default/objects/Release__c/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <inlineHelpText>Enter the URL of the Change Request raised for this release</inlineHelpText>
    <label>Change Request</label>
    <type>Url</type>
</CustomField>