force-app/main/default/objects/Release__c/fields/JIRA_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Project_Code__c</fullName>
    <description>Only Applicable if the Release relates to 1 JIRA Project</description>
    <inlineHelpText>Enter the JIRA project Code e.g. &quot;SFP&quot;</inlineHelpText>
    <label>JIRA Project Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>