force-app/main/default/objects/Release__c/fields/JIRA_Project_Link__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Project_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://valueretail.atlassian.net/browse/&quot; + JIRA_Project_Code__c , &quot;JIRA Project&quot; , &quot;_blank&quot;)</formula>
    <label>JIRA Project Link</label>
    <type>Text</type>
</CustomField>