force-app/main/default/objects/Release__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>Expected_Release_Date__c</columns>
    <columns>Actual_Release_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>