force-app/main/default/objects/Release__c/listViews/Releases_in_the_Last_Month.listView-meta.xml
<ListView>
    <fullName>Releases_in_the_Last_Month</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>Expected_Release_Date__c</columns>
    <columns>Actual_Release_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Actual_Release_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Releases in the Last Month</label>
</ListView>